add api seats, bookings/getByMovieId, modify allow user permission route
